; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_ringbuffer.c_gen6_irq_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_ringbuffer.c_gen6_irq_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_engine_cs = type { i32, i32, i32 }

@RING_IMR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intel_engine_cs*)* @gen6_irq_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gen6_irq_enable(%struct.intel_engine_cs* %0) #0 {
  %2 = alloca %struct.intel_engine_cs*, align 8
  store %struct.intel_engine_cs* %0, %struct.intel_engine_cs** %2, align 8
  %3 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %4 = load i32, i32* @RING_IMR, align 4
  %5 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %6 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %9 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = or i32 %7, %10
  %12 = xor i32 %11, -1
  %13 = call i32 @ENGINE_WRITE(%struct.intel_engine_cs* %3, i32 %4, i32 %12)
  %14 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %15 = load i32, i32* @RING_IMR, align 4
  %16 = call i32 @ENGINE_POSTING_READ(%struct.intel_engine_cs* %14, i32 %15)
  %17 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %18 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %21 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @gen5_gt_enable_irq(i32 %19, i32 %22)
  ret void
}

declare dso_local i32 @ENGINE_WRITE(%struct.intel_engine_cs*, i32, i32) #1

declare dso_local i32 @ENGINE_POSTING_READ(%struct.intel_engine_cs*, i32) #1

declare dso_local i32 @gen5_gt_enable_irq(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
